--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +18,7 @@
     "@types/react-clock": "^3.0.1",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
     "sass": "^1.54.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
