--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
