--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "netlify-cli": "^10.17.4",
     "sass": "^1.54.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
