--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@types/react": "^18.0.15",
     "@types/react-clock": "^3.0.1",
     "@types/react-dom": "^18.0.6",
+    "@types/serviceworker": "^0.0.50",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
     "netlify-cli": "^10.17.4",
     "sass": "^1.54.3",
     "typescript": "^4.7.4",
-    "vite": "^3.0.4"
+    "vite": "^3.0.4",
+    "vite-plugin-pwa": "^0.12.3"
   }
 }
